# py-notify

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
.github/workflows/: make-docs.yml
boto3/docs/: service.py
docsrc/: conf.py  index.rst
notify/: __init__.py  amazon.py  bitly.py  gmail.py
notify/bitly_api/: __init__.py
notify/boto3/: __init__.py  session.py
notify/boto3/docs/: __init__.py  action.py  attr.py  collection.py  docstring.py  resource.py  service.py  subresource.py  utils.py  waiter.py
notify/boto3/dynamodb/: conditions.py  transform.py
notify/boto3/ec2/: deletetags.py
notify/boto3/s3/: inject.py  transfer.py
notify/botocore/: client.py  endpoint.py  paginate.py  response.py  session.py  waiter.py
notify/jmespath/: __init__.py  exceptions.py  functions.py  lexer.py  parser.py  visitor.py
scripts/: config.ini  make_data.py  make_pyt_archive.py
src/py_message/: __init__.py
src/py_notify/: __init__.py
src/py_notify/utils/: __init__.py  credentials.py
testing/: test_py_message.py  test_py_notify.py
